src/components/styles/footer.css
.Footer {
  padding: 60px 0 120px 0;
  position: relative;
  height: 800px;
}

.footerInnerWrapper {
  margin: 180px;
  position: relative;
}

.footerInnerWrapper a {
  margin: 0;
  position: absolute;
  width: 360px;
  height: 360px;
  border: 2px solid #000;
  background-color: #fff;
  font-size: 40px;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: transform 0.2s;
}
.footerInnerWrapper a:hover {
  transition: transform 0.2s;
  transform: translate(-50%, -50%) scale(1.1);
  z-index: 3;
}

.footerInnerWrapper a h2 {
  font-weight: 300;
}

.footerInnerWrapper a:nth-child(1) {
  left: 260px;
  top: 240px;
}
.footerInnerWrapper a:nth-child(2) {
  left: 0px;
  top: 0px;
}
.footerInnerWrapper a:nth-child(3) {
  left: 840px;
}
@media screen and (max-width: 1200px) {
  .footerInnerWrapper a {
    width: 30vw;
    height: 30vw;
    font-size: 3.5vw;
  }
}

